Further big improvements to the UI

--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -1,95 +1,255 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>OpenGrok to VS Code - Settings</title>
   <style>
-    body {
-      padding: 20px;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      max-width: 600px;
+    * {
+      box-sizing: border-box;
     }
-    h1 { font-size: 20px; margin-bottom: 20px; }
-    h2 { font-size: 16px; margin-top: 30px; margin-bottom: 10px; }
+
+    body {
+      padding: 0;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      padding: 40px 20px;
+    }
+
+    .container {
+      max-width: 700px;
+      width: 100%;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.12), 0 2px 8px rgba(0, 0, 0, 0.08);
+      overflow: hidden;
+    }
+
+    .header {
+      background: linear-gradient(135deg, #007acc 0%, #005a9e 100%);
+      color: white;
+      padding: 24px 32px;
+      border-bottom: 3px solid #004578;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin: 0;
+      font-weight: 600;
+      letter-spacing: 0.01em;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+
+    .content {
+      padding: 32px 32px 28px 32px;
+    }
+
+    h2 {
+      font-size: 18px;
+      margin: 0 0 12px 0;
+      color: #333;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .section {
+      margin-bottom: 24px;
+      padding: 20px;
+      background: #fafafa;
+      border-radius: 8px;
+      border: 1px solid #e0e0e0;
+    }
+
+    .section:last-child {
+      margin-bottom: 0;
+    }
+
     .mapping {
       display: flex;
-      gap: 10px;
-      margin: 10px 0;
+      gap: 12px;
+      margin: 12px 0;
       align-items: center;
+      background: white;
+      padding: 12px;
+      border-radius: 6px;
+      border: 1px solid #e0e0e0;
+      transition: all 0.2s ease;
     }
+
+    .mapping:hover {
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+      border-color: #007acc;
+    }
+
     .mapping input {
       flex: 1;
-      padding: 6px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
+      padding: 10px 12px;
+      border: 1px solid #d0d0d0;
+      border-radius: 6px;
+      font-size: 14px;
+      font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+      transition: all 0.2s ease;
     }
+
+    .mapping input:focus {
+      outline: none;
+      border-color: #007acc;
+      box-shadow: 0 0 0 3px rgba(0, 122, 204, 0.1);
+    }
+
     .mapping button {
-      padding: 6px 12px;
-      background: #dc3545;
+      padding: 10px 16px;
+      background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);
       color: white;
       border: none;
-      border-radius: 3px;
+      border-radius: 6px;
       cursor: pointer;
+      font-weight: 500;
+      font-size: 13px;
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0 2px 4px rgba(220, 53, 69, 0.3);
     }
-    .mapping button:hover { background: #c82333; }
+
+    .mapping button:hover {
+      background: linear-gradient(135deg, #c82333 0%, #bd2130 100%);
+      transform: translateY(-1px);
+      box-shadow: 0 4px 8px rgba(220, 53, 69, 0.4);
+    }
+
+    .mapping button:active {
+      transform: translateY(0);
+    }
+
     button {
-      padding: 8px 16px;
-      background: #007bff;
+      padding: 12px 24px;
+      background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
       color: white;
       border: none;
-      border-radius: 3px;
+      border-radius: 6px;
       cursor: pointer;
+      font-weight: 500;
+      font-size: 14px;
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0 2px 6px rgba(0, 123, 255, 0.3);
     }
-    button:hover { background: #0056b3; }
-    .add-btn { background: #28a745; }
-    .add-btn:hover { background: #218838; }
-    #status {
-      margin-left: 10px;
-      color: #28a745;
+
+    button:hover {
+      background: linear-gradient(135deg, #0056b3 0%, #004085 100%);
+      transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(0, 123, 255, 0.4);
+    }
+
+    button:active {
+      transform: translateY(0);
+    }
+
+    .add-btn {
+      background: linear-gradient(135deg, #28a745 0%, #218838 100%);
+      box-shadow: 0 2px 6px rgba(40, 167, 69, 0.3);
+    }
+
+    .add-btn::before {
+      content: "+";
+      font-size: 18px;
+      margin-right: 4px;
       font-weight: bold;
     }
+
+    .add-btn:hover {
+      background: linear-gradient(135deg, #218838 0%, #1e7e34 100%);
+      box-shadow: 0 4px 12px rgba(40, 167, 69, 0.4);
+    }
+
+
     .hint {
       color: #666;
-      font-size: 12px;
-      margin-top: 5px;
+      font-size: 13px;
+      margin-top: 8px;
+      line-height: 1.6;
+      padding: 10px 12px;
+      background: white;
+      border-left: 3px solid #007acc;
+      border-radius: 4px;
     }
-    .section {
-      margin-bottom: 20px;
+
+    input[type="text"] {
+      width: 100%;
+      padding: 12px 14px;
+      border: 1px solid #d0d0d0;
+      border-radius: 6px;
+      font-size: 14px;
+      font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+      transition: all 0.2s ease;
+      background: white;
     }
+
+    input[type="text"]:focus {
+      outline: none;
+      border-color: #007acc;
+      box-shadow: 0 0 0 3px rgba(0, 122, 204, 0.1);
+    }
+
+    input[type="checkbox"] {
+      width: 18px;
+      height: 18px;
+      cursor: pointer;
+      accent-color: #007acc;
+    }
+
+    label {
+      cursor: pointer;
+      user-select: none;
+      font-size: 14px;
+      color: #333;
+    }
+
   </style>
 </head>
 <body>
-  <h1>OpenGrok to VS Code - Settings</h1>
+  <div class="container">
+    <div class="header">
+      <h1>OpenGrok to VS Code</h1>
+    </div>
 
-  <div class="section">
-    <h2>Default Workspace Root (Optional)</h2>
-    <input type="text" id="defaultWorkspaceRoot" placeholder="/Users/yourname/projects" style="width: 100%;" />
-    <div class="hint">
-      If set, projects without explicit mappings will use: {root}/{project}
+    <div class="content">
+      <div class="section">
+        <h2>Default Workspace Root (Optional)</h2>
+        <input type="text" id="defaultWorkspaceRoot" placeholder="/Users/yourname/projects" />
+        <div class="hint">
+          If set, projects without explicit mappings will use: {root}/{project}
+        </div>
+      </div>
+
+      <div class="section">
+        <h2>Project Mappings</h2>
+        <div class="hint" style="margin-bottom: 15px;">
+          Map OpenGrok project names to local workspace directories
+        </div>
+        <div id="mappings"></div>
+        <button class="add-btn" id="addMapping">Add Mapping</button>
+      </div>
+
+      <div class="section">
+        <h2>Experimental Features</h2>
+        <label style="display: flex; align-items: center; gap: 10px; cursor: pointer; padding: 8px 0;">
+          <input type="checkbox" id="experimentalFileFinder" />
+          <span>Enable Quick File Finder</span>
+        </label>
+        <div class="hint">
+          Adds a "Find File" button and keyboard shortcut (T) for quick file navigation.
+          Note: May not work correctly with all OpenGrok instances.
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="section">
-    <h2>Experimental Features</h2>
-    <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
-      <input type="checkbox" id="experimentalFileFinder" />
-      <span>Enable Quick File Finder (Experimental)</span>
-    </label>
-    <div class="hint">
-      Adds a "Find File" button and keyboard shortcut (T) for quick file navigation.
-      Note: May not work correctly with all OpenGrok instances.
-    </div>
-  </div>
-
-  <h2>Project Mappings</h2>
-  <div class="hint" style="margin-bottom: 15px;">
-    Map OpenGrok project names to local workspace directories
-  </div>
-  <div id="mappings"></div>
-  <button class="add-btn" id="addMapping">+ Add Mapping</button>
-
-  <br><br>
-  <button id="save">Save Settings</button>
-  <span id="status"></span>
 
   <script src="options.js"></script>
 </body>
