File finding now works!

--- a/chrome-extension/options.html
+++ b/chrome-extension/options.html
@@ -245,7 +245,7 @@
         </label>
         <div class="hint">
           Adds a "Find File" button and keyboard shortcut (T) for quick file navigation.
-          Note: May not work correctly with all OpenGrok instances.
+          Requires OpenGrok REST API v1.0+. Press Enter to open in OpenGrok, Shift+Enter to open in VS Code.
         </div>
       </div>
     </div>
